--- a/k8s/k8s-cloud-challenge/app-service.yaml
+++ b/k8s/k8s-cloud-challenge/app-service.yaml
@@ -5,10 +5,11 @@ metadata:
 spec:
   selector:
     app: ecommapp  # Selects pods with the label "app: vproapp"
-  type: LoadBalancer  # Exposes the Service externally using a LoadBalancer
+  type: NodePort  # Exposes the Service externally using a LoadBalancer
   ports:
     - protocol: TCP  # Protocol used for the ports
       port: 80       # Port exposed on the Service
       targetPort: 80  # Port on the pods that the Service forwards traffic to
       # Specify the targetPort where the application in the pods is listening
+      nodePort: 32000
 
