--- a/k8s/k8s-cloud-challenge/.github/workflows/ci-cd.yml
+++ b/k8s/k8s-cloud-challenge/.github/workflows/ci-cd.yml
@@ -1,1 +1,29 @@
-dsd
+name: CI/CD 
+
+on: 
+  push:
+    branches: 
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
+
+  jobs:
+  Artifacts_Build_and_test:
+    name: Build the java app
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      packages: read
+      # To report GitHub Actions status checks
+      statuses: write
+    steps: 
+      - name: Checkout source code
+        uses: actions/checkout@v4
+        with: 
+          fetch-depth: 0
+          
+      - name: check artifacts
+        run: |
+          cat /etc/os-release
