--- a/.github/workflows/k8s-cloud-challenge/ci-cd.yaml
+++ b/.github/workflows/k8s-cloud-challenge/ci-cd.yaml
@@ -1,1 +1,42 @@
-fsfsf
+name: CI/CD
+  
+on: 
+  push:
+    branches: 
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
+
+jobs:
+  Artifacts_Build_and_test:
+    name: Build the java app
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      packages: read
+      # To report GitHub Actions status checks
+      statuses: write
+    steps: 
+      - name: Checkout source code
+        uses: actions/checkout@v4
+        with: 
+          fetch-depth: 0
+      
+      - name: Setup JDK 11
+        uses: actions/setup-java@v3
+        with: 
+          java-version: '11'
+          distribution: 'corretto'
+
+#      - name: Super-linter
+ #       uses: super-linter/super-linter@v6.4.1  # x-release-please-version
+  #      env:
+   #       # To report GitHub Actions status checks
+    #      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     #     DISABLE_ERRORS: false # this will pass this step ever with errors recorded.
+
+      - name: check artifacts
+        run: |
+          ls -al target
